clusters/san-jose/apps/xbs/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xbs
  namespace: apps
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80       
      targetPort: 8080 # the port for the pod
  selector:
    app: xbs-api
